2015-12-08

	* src/subscribedialog.c
	  src/prefs_actions.c
	  src/action.c: made sizes of more dialogs DPI-aware.

2015-12-07

	* src/prefs_template.c
	  src/addressadd.c
	  src/prefs_display_items.c: made sizes of more dialogs DPI-aware.

2015-12-02

	* libsylph/filter.c: strmatch_regex(): fixed regex match when using
	  Oniguruma (r3481 made it match only the head of searched string).

2015-11-27

	* version 3.5.0rc

2015-11-27

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2015-11-26

	* libsylph/procmsg.c:
	  procmsg_read_cache_data_str_mem()
	  READ_CACHE_DATA_INT(): fix for sigbus on ARM caused by unaligned
	  access (#242).

2015-10-27

	* src/prefs_filter_edit.c: prefs_filter_edit_open():
	  win32: fix irresponsible text entries on the first display of the
	  dialog.

2015-08-07

	* libsylph/filter.c: strmatch_regex(): use Oniguruma native API
	  to prevent crash on Ubuntu 14.04.

2015-07-09

	* src/update_check.c: don't read() from child stdout directly
	  (fixed crash with different version of MSVCRT, thanks to
	  Gisle Vanem).

2015-06-24

	* version 3.5.0beta3

2015-06-24

	* src/about.c
	  src/sylpheed.rc.in: updated copyright year.

2015-06-22

	* src/addressbook.c: disabled auto expand of columns because it
	  conflicts with column sizes settings.

2015-02-06

	* libsylph/utils.c: _s_tempnam(): memory allocated by _wtempnam()
	  must be freed by MSVCRT, not by GLib (thanks to Gisle Vanem).

2015-01-16

	* src/gtkutils.c: gtkut_text_buffer_insert_with_tag_by_name():
	  guard against the case of len == 0 (#215).

2015-01-16

	* src/mainwindow.c: main_window_window_state_cb():
	  win32: fixed a bug that maximized state was unset on minimize.

2014-12-12

	* libsylph/procmime.[ch]
	  libsylph/libsylph-0.def
	  src/mimeview.c: made file names generated on opening attachments
	  more user-friendly.

2014-12-12

	* src/mainwindow.c: main_window_window_state_cb(): added more debug
	  print.

2014-12-09
