@@ -3,6 +3,9 @@
 	* src/subscribedialog.c
 	  src/prefs_actions.c
 	  src/action.c: made sizes of more dialogs DPI-aware.
+	* src/prefs_template.c
+	  src/addressadd.c
+	  src/prefs_display_items.c: update copyright year.
 
 2015-12-07
 
